[tool.poetry]
name = "brooks_mfc"
version = "0.1.0"
description = "Python driver for Brooks Instrument mass flow controllers"
license = "GPLv2"
authors = ["jamesjeffryes <jamesgjeffryes@gmail.com>"]
readme = "README.md"
repository = "http://github.com/numat/brooks_mfc/"
classifiers=[
    'Development Status :: 4 - Beta',
    'Natural Language :: English',
    'Topic :: Scientific/Engineering :: Human Machine Interfaces'
]
packages = [
    { include = "brooks_mfc" }
]

[tool.poetry.dependencies]
python = "^3.6.1"
aiohttp = "^2.3.10"

[tool.poetry.scripts]
brooks-mfc = 'brooks_mfc:command_line'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
